--- a/src/css/components/page-control.css
+++ b/src/css/components/page-control.css
@@ -12,6 +12,7 @@
   -webkit-tap-highlight-color: transparent;
   touch-action: manipulation;
   box-sizing: border-box;
+  user-select: none;
   width: 7px;
   height: 7px;
   border-radius: 50%;
